force-app/main/default/objects/Knowledge_Day_Voting_Group__c/Knowledge_Day_Voting_Group__c.object-meta.xml
<CustomObject>
    <label>Knowledge Day Voting Group</label>
    <nameField>
        <label>Knowledge Day Voting Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Knowledge Day Voting Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>