force-app/main/default/objects/Knowledge_Day_Voting_Group__c/fields/Colour_Hex_Code__c.field-meta.xml
<CustomField>
    <fullName>Colour_Hex_Code__c</fullName>
    <inlineHelpText>Should be &quot;#&quot; followed by 6 hexadecimal digits</inlineHelpText>
    <label>Colour Hex Code</label>
    <length>7</length>
    <type>Text</type>
</CustomField>