force-app/main/default/objects/Knowledge_Day_Voting_Group__c/fields/IsVoting__c.field-meta.xml
<CustomField>
    <fullName>IsVoting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voting</label>
    <type>Checkbox</type>
</CustomField>