force-app/main/default/objects/Knowledge_Day_Voting_Group__c/fields/Winner__c.field-meta.xml
<CustomField>
    <fullName>Winner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winner</label>
    <referenceTo>Knowledge_Day_Voting_Group_Member__c</referenceTo>
    <relationshipLabel>Knowledge Day Voting Groups Won</relationshipLabel>
    <relationshipName>Knowledge_Day_Voting_Groups_Won</relationshipName>
    <type>Lookup</type>
</CustomField>